--- a/new test/NewTest/NewTest/NewTest.csproj
+++ b/new test/NewTest/NewTest/NewTest.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Branch3Class.cs" />
     <Compile Include="Class5.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Class2.cs" />
